--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     },
     "dependencies": {
         "@fastify/cors": "^11.2.0",
+        "@fastify/multipart": "^9.3.0",
+        "@fastify/swagger": "^9.6.1",
+        "@fastify/swagger-ui": "^5.2.4",
         "fastify": "^5.6.2",
         "fastify-type-provider-zod": "^6.1.0",
         "zod": "^4.3.5"
