--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "scripts": {
         "dev": "tsx watch --env-file .env src/infra/http/server.ts",
         "test": "dotenv -e .env.test -- vitest run",
-        "test:watch": "dotenv -e .env.test -- vitest"
+        "test:watch": "dotenv -e .env.test -- vitest",
+        "db:generate": "drizzle-kit generate",
+        "db:migrate": "drizzle-kit migrate",
+        "db:studio": "drizzle-kit studio"
     },
     "keywords": [],
     "author": "",
@@ -16,6 +19,7 @@
         "@biomejs/biome": "^2.3.11",
         "@types/node": "^25.0.3",
         "dotenv-cli": "^11.0.0",
+        "drizzle-kit": "^0.31.8",
         "tsx": "^4.21.0",
         "typescript": "^5.9.3",
         "vite-tsconfig-paths": "^6.0.4",
@@ -26,8 +30,10 @@
         "@fastify/multipart": "^9.3.0",
         "@fastify/swagger": "^9.6.1",
         "@fastify/swagger-ui": "^5.2.4",
+        "drizzle-orm": "^0.45.1",
         "fastify": "^5.6.2",
         "fastify-type-provider-zod": "^6.1.0",
+        "postgres": "^3.4.8",
         "zod": "^4.3.5"
     }
 }
