--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "fastify": "^5.6.2",
         "fastify-type-provider-zod": "^6.1.0",
         "postgres": "^3.4.8",
+        "uuidv7": "^1.1.0",
         "zod": "^4.3.5"
     }
 }
