--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
         "vitest": "^4.0.16"
     },
     "dependencies": {
+        "@aws-sdk/client-s3": "^3.970.0",
+        "@aws-sdk/lib-storage": "^3.970.0",
         "@fastify/cors": "^11.2.0",
         "@fastify/multipart": "^9.3.0",
         "@fastify/swagger": "^9.6.1",
