--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "license": "ISC",
     "devDependencies": {
         "@biomejs/biome": "^2.3.11",
+        "@faker-js/faker": "^10.2.0",
         "@types/node": "^25.0.3",
         "dotenv-cli": "^11.0.0",
         "drizzle-kit": "^0.31.8",
@@ -35,6 +36,7 @@
         "@fastify/multipart": "^9.3.0",
         "@fastify/swagger": "^9.6.1",
         "@fastify/swagger-ui": "^5.2.4",
+        "dayjs": "^1.11.19",
         "drizzle-orm": "^0.45.1",
         "fastify": "^5.6.2",
         "fastify-type-provider-zod": "^6.1.0",
