--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
         "db:studio": "drizzle-kit studio",
         "db:migrate:test": "dotenv -e .env.test -- drizzle-kit migrate",
         "pretest": "npm run db:migrate:test",
-        "preteste:watch": "npm run db:migrate:test"
+        "preteste:watch": "npm run db:migrate:test",
+        "build": "tsup-node"
     },
     "keywords": [],
     "author": "",
@@ -24,6 +25,7 @@
         "@types/node": "^25.0.3",
         "dotenv-cli": "^11.0.0",
         "drizzle-kit": "^0.31.8",
+        "tsup": "^8.5.1",
         "tsx": "^4.21.0",
         "typescript": "^5.9.3",
         "vite-tsconfig-paths": "^6.0.4",
