--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,13 +32,22 @@ jobs:
                 SHA=$(echo $GITHUB_SHA | head -c7)
                 echo "sha=$SHA" >> $GITHUB_OUTPUT
 
+            # Alternativa 1 para mandar imagem para a nuvem
+            # - name: Build and push image to AWS ECR
+            #   id: build-push-image
+            #   env: 
+            #     ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+            #     ECR_REPOSITORY: ${{ vars.ECR_REPOSITORY }}
+            #     IMAGE_TAG: ${{ steps.generate-tag.outputs.sha }}
+            #   run: |
+            #     docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+            #     docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+        
+            # Alternativa 2 para mandar imagem para a nuvem
             - name: Build and push image to AWS ECR
               id: build-push-image
-              env: 
-                ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-                ECR_REPOSITORY: ${{ vars.ECR_REPOSITORY }}
-                IMAGE_TAG: ${{ steps.generate-tag.outputs.sha }}
-              run: |
-                docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
-                docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-        
+              uses: docker/build-push-action@v6
+              with:
+                context: .
+                push: true
+                tags: ${{ steps.login-ecr.outputs.registry }}/${{ vars.ECR_REPOSITORY }}:${{ steps.generate-tag.outputs.sha }}
