--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,7 +47,7 @@ jobs:
                 SHA=$(echo $GITHUB_SHA | head -c7)
                 echo "sha=$SHA" >> $GITHUB_OUTPUT
 
-            - name: Build and push image test to trivy scanner
+            - name: Build image test to trivy scanner
               uses: docker/build-push-action@v6
               with:
                 context: .
