--- a/.env.test
+++ b/.env.test
@@ -2,7 +2,11 @@ PORT=3333
 NODE_ENV=test
 
 # Database
-DATABASE_URL="postgresql://docker:docker@localhost:5432/upload_test"
+POSTGRES_USER=""
+POSTGRES_PASSWORD=""
+POSTGRES_DB=upload
+POSTGRES_PORT=5432
+DATABASE_URL="postgresql://POSTGRES_USER:POSTGRES_PASSWORD@localhost:5432/upload_test"
 
 # Cloudflare
 CLOUDFLARE_ACCOUNT_ID=""
